--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3",
-    "http": "^0.0.1-security",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.2.2",
-    "prompt-sync": "^4.2.0",
-    "socket.io": "^4.7.5"
+    "prompt-sync": "^4.2.0"
   }
 }
